Fix cast issues, tooltips